--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.4.7",
     "express": "~4.16.1",
     "jsdom": "^26.0.0",
+    "mammoth": "^1.9.0",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
