--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "@arcjet/node": "^1.0.0-beta.2",
     "@google/generative-ai": "^0.22.0",
     "@mozilla/readability": "^0.5.0",
     "axios": "^1.7.9",
