--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@arcjet/node": "^1.0.0-beta.2",
     "@google/generative-ai": "^0.22.0",
     "@mozilla/readability": "^0.5.0",
+    "@supabase/supabase-js": "^2.49.1",
     "@upstash/redis": "^1.34.4",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
